--- a/Dotnet.Script.NuGetMetadataResolver.Tests/Dotnet.Script.NuGetMetadataResolver.Tests.csproj
+++ b/Dotnet.Script.NuGetMetadataResolver.Tests/Dotnet.Script.NuGetMetadataResolver.Tests.csproj
@@ -2,13 +2,14 @@
 
   <PropertyGroup>    
     <TargetFramework>netcoreapp1.1</TargetFramework>    
-    <AssemblyName>'Microsoft.CodeAnalysis.NuGet.Tests</AssemblyName>
+    <AssemblyName>Dotnet.Script.NuGetMetadataResolver.Tests</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="2.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0" />
     <PackageReference Include="Moq" Version="4.7.1" />
+    <PackageReference Include="Shouldly" Version="2.8.2" />
     <PackageReference Include="xunit" Version="2.2.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
   </ItemGroup>
