--- a/src/Dotnet.Script.NuGetMetadataResolver/Dotnet.Script.NuGetMetadataResolver.csproj
+++ b/src/Dotnet.Script.NuGetMetadataResolver/Dotnet.Script.NuGetMetadataResolver.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>netstandard1.6</TargetFramework>
     <AssemblyName>Dotnet.Script.NuGetMetadataResolver</AssemblyName>
     <RootNamespace>Dotnet.Script.NuGetMetadataResolver</RootNamespace>
-    <Version>1.0.0-beta6</Version>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
