--- a/src/Dotnet.Script.NuGetMetadataResolver/Dotnet.Script.NuGetMetadataResolver.csproj
+++ b/src/Dotnet.Script.NuGetMetadataResolver/Dotnet.Script.NuGetMetadataResolver.csproj
@@ -4,12 +4,18 @@
     <TargetFramework>netstandard1.6</TargetFramework>
     <AssemblyName>Dotnet.Script.NuGetMetadataResolver</AssemblyName>
     <RootNamespace>Dotnet.Script.NuGetMetadataResolver</RootNamespace>
-    <Version>1.0.2</Version>
+    <Version>1.0.6</Version>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="2.0.0" />
     <PackageReference Include="NuGet.Protocol.Core.v3" Version="4.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Microsoft.Extensions.DependencyModel">
+      <HintPath>..\..\..\..\Users\bri\.nuget\packages\microsoft.extensions.dependencymodel\1.1.0\lib\netstandard1.6\Microsoft.Extensions.DependencyModel.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
