--- a/src/Dotnet.Script.NuGetMetadataResolver/Dotnet.Script.NuGetMetadataResolver.csproj
+++ b/src/Dotnet.Script.NuGetMetadataResolver/Dotnet.Script.NuGetMetadataResolver.csproj
@@ -1,10 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard1.6</TargetFramework>
+    <TargetFrameworks>netstandard1.6;net46</TargetFrameworks>
     <AssemblyName>Dotnet.Script.NuGetMetadataResolver</AssemblyName>
     <RootNamespace>Dotnet.Script.NuGetMetadataResolver</RootNamespace>
-    <Version>1.0.6</Version>
+    <Version>1.0.7</Version>
   </PropertyGroup>
 
   <ItemGroup>
