--- a/src/Dotnet.Script.NuGetMetadataResolver/Dotnet.Script.NuGetMetadataResolver.csproj
+++ b/src/Dotnet.Script.NuGetMetadataResolver/Dotnet.Script.NuGetMetadataResolver.csproj
@@ -4,8 +4,18 @@
     <TargetFrameworks>netstandard1.6;net46</TargetFrameworks>
     <AssemblyName>Dotnet.Script.NuGetMetadataResolver</AssemblyName>
     <RootNamespace>Dotnet.Script.NuGetMetadataResolver</RootNamespace>
-    <Version>2.0.0</Version>
+    <Version>2.0.1</Version>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="NuGet\NuGet.exe" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="NuGet\NuGet.exe">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="2.0.0" />
