Extract as NuGet350.exe

--- a/src/Dotnet.Script.NuGetMetadataResolver.Tests/Dotnet.Script.NuGetMetadataResolver.Tests.csproj
+++ b/src/Dotnet.Script.NuGetMetadataResolver.Tests/Dotnet.Script.NuGetMetadataResolver.Tests.csproj
@@ -24,6 +24,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Sample\SampleScript.csx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="ScriptWithMultiplePackages.csx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
